--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -149,7 +149,27 @@ jobs:
         run: tar -xzpf work.tar.gz
 
       - name: Build packages
+        id: build_packages
+        continue-on-error: true  # This allows subsequent steps to run even if this step fails
         run: pnpm run build:packages
+
+      - name: Debug TypeScript configuration
+        if: always()  # This ensures the step runs even if previous steps fail
+        run: |
+          echo "Current directory:"
+          pwd
+          echo "Directory contents of taqueria-lib-ligo:"
+          ls -R taqueria-lib-ligo
+          echo "TypeScript version:"
+          npx tsc --version
+          echo "tsconfig.json contents:"
+          cat taqueria-lib-ligo/tsconfig.json
+          echo "Trying to compile taqueria-lib-ligo:"
+          npx tsc -p taqueria-lib-ligo/tsconfig.json --listFiles
+
+      - name: Check build status
+        if: steps.build_packages.outcome != 'success'
+        run: exit 1
 
       - name: Get VSIX
         id: vsix
