--- a/taqueria-lib-ligo/tsconfig.json
+++ b/taqueria-lib-ligo/tsconfig.json
@@ -45,8 +45,8 @@
 
 		/* Emit */
 		"declaration": true, /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
-		// "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
-		// "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
+		"declarationMap": true, /* Create sourcemaps for d.ts files. */
+		"emitDeclarationOnly": true, /* Only output d.ts files and not JavaScript files. */
 		// "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
 		// "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If `declaration` is true, also designates a file that bundles all .d.ts output. */
 		// "outDir": "./",                                   /* Specify an output folder for all emitted files. */
@@ -103,21 +103,10 @@
 	"references": [
 		{
 			"path": "../taqueria-sdk"
+		},
+		{
+			"path": "../taqueria-protocol"
 		}
-		// {
-		// 	"path": "../taqueria-protocol"
-		// }
 	],
-	"include": ["./*.ts"],
-	"files": [
-		"./index.ts",
-		"./common.ts",
-		"./compile-all.ts",
-		"./compile.ts",
-		"./createContract.ts",
-		"./ligo_templates.ts",
-		"./ligo.ts",
-		"./main.ts",
-		"./test.ts"
-	]
+	"include": ["./*.ts"]
 }
