--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,12 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 20
           cache: 'pnpm'
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.30.1
 
       - uses: denoland/setup-deno@v1
         with:
@@ -78,8 +82,12 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 20
           cache: 'pnpm'
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.30.1
 
       - uses: denoland/setup-deno@v1
         with:
@@ -138,8 +146,12 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 20
           cache: 'pnpm'
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.30.1
               
       - uses: denoland/setup-deno@v1
         with:
@@ -234,6 +246,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.30.1
+
       - name: Gather package info
         id: gather-packages
         run: |
@@ -269,9 +285,13 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 20
           cache: 'pnpm'
-             
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.30.1
+           
       # Publish packages
       - name: Publish to npm
         run: |
@@ -318,6 +338,10 @@ jobs:
 
       - name: Extract work archive
         run: tar -xzpf work-packages.tar.gz
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.30.1
 
       - name: Build Website
         run: |
@@ -436,6 +460,10 @@ jobs:
       - name: Extract work archive
         run: tar -xzpf work-packages.tar.gz
 
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.30.1
+
       - name: Get version
         id: get_version
         run: |
@@ -497,7 +525,12 @@ jobs:
     steps:
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 20
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.30.1
+
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
@@ -547,7 +580,11 @@ jobs:
     steps:
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 20
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.30.1
 
       - name: Download work archive
         uses: actions/download-artifact@v4
@@ -574,7 +611,11 @@ jobs:
     steps:
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 20
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.30.1
 
       - uses: denoland/setup-deno@v1
         with:
