--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,12 @@
+name: CI/CD Pipeline
+
 on:
   push:
-      branches:
-          - main
+    branches:
+      - main
   pull_request:
-      branches:
-          - main
+    branches:
+      - main
 
 jobs:
   # Build the 'taq' binary on Ubuntu
@@ -42,7 +44,7 @@ jobs:
 
       - name: Build binary
         run: pnpm run build:binary
-              
+
       - name: Save Deno Cache
         uses: actions/cache@v4
         with:
@@ -107,7 +109,7 @@ jobs:
 
       - name: Build binary
         run: pnpm run build:binary
-              
+
       - name: Save Deno Cache
         uses: actions/cache@v4
         with:
@@ -137,7 +139,7 @@ jobs:
           path: work-build-macos.tar.gz
           retention-days: 1
 
-  # Builds all NPM packages using the work archive from Ubuntu build
+  # Build NPM packages using the work archive from Ubuntu build
   build-packages:
     needs: build-binary-ubuntu
     runs-on: ubuntu-latest
@@ -152,7 +154,7 @@ jobs:
       - uses: pnpm/setup@v2
         with:
           version: 7.30.1
-              
+
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
@@ -196,11 +198,97 @@ jobs:
           path: work-packages.tar.gz
           retention-days: 1
 
-  # The rest of your workflow remains the same, with 'pnpm/setup@v2' used wherever pnpm is needed.
+  # Check whether this commit is related to a PR or if the commit message references an issue
+  check_is_pr_or_issue:
+    runs-on: ubuntu-latest
+    outputs:
+      should_run: ${{ steps.check_pr_or_issue.outputs.should_run }}
+      issue_number: ${{ steps.check_pr_or_issue.outputs.issue_number }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+      - name: Check for PR or Issue
+        id: check_pr_or_issue
+        run: |
+          ISSUE_ID="$(git log --format=%B -n 1 ${{ github.sha }} | grep -Eo '#[0-9]+' | awk 'NR==1{ print $1 }' | tr -d '#')"
+          SHOULD_RUN="no"
+          if [[ ! -z "${{ github.event.pull_request.number }}" || ! -z "$ISSUE_ID" ]]; then
+            SHOULD_RUN="yes"
+          fi
+          echo "should_run=$SHOULD_RUN" >> "$GITHUB_OUTPUT"
+          echo "issue_number=$ISSUE_ID" >> "$GITHUB_OUTPUT"
 
-  # Example in 'publish-packages' job:
+  # Check whether this is a release
+  check_is_release:
+    runs-on: ubuntu-latest
+    outputs:
+      is_release: ${{ steps.check_release.outputs.is_release }}
+      version: ${{ steps.check_release.outputs.version }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+      - name: Check for Release
+        id: check_release
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "Version: $VERSION"
+          IS_RELEASE="no"
+          if [[ $(echo $VERSION | awk -F. '{print $3}') == "0" ]]; then
+            IS_RELEASE="yes"
+            echo "This is a final release"
+          fi
+          echo "is_release=$IS_RELEASE" >> "$GITHUB_OUTPUT"
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+
+  # Gather package info for publishing
+  gather-package-info:
+    needs: build-packages
+    runs-on: ubuntu-latest
+    outputs:
+      taggedPackages: ${{ steps.gather-packages.outputs.taggedPackages }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
+      - uses: pnpm/setup@v2
+        with:
+          version: 7.30.1
+
+      - name: Download work archive
+        uses: actions/download-artifact@v4
+        with:
+          name: work-packages-latest
+          path: .
+
+      - name: Extract work archive
+        run: tar -xzpf work-packages.tar.gz
+
+      - name: Gather package info
+        id: gather-packages
+        run: |
+          PACKAGES=$(npx lerna list --json)
+          TAGGED_PACKAGES=()
+          for pkg in $(echo "${PACKAGES}" | jq -r '.[] | @base64'); do
+            pkg_name=$(echo "$pkg" | base64 --decode | jq -r '.name')
+            pkg_location=$(echo "$pkg" | base64 --decode | jq -r '.location')
+            pkg_tag=$(jq -r '.tag // "auto"' < "$pkg_location/package.json")
+            TAGGED_PACKAGES+=("{\"name\":\"$pkg_name\",\"tag\":\"$pkg_tag\",\"location\":\"$pkg_location\"}")
+          done
+          TAGGED_PACKAGES_JSON="[$(IFS=,; echo "${TAGGED_PACKAGES[*]}")]"
+          echo "taggedPackages=$TAGGED_PACKAGES_JSON" >> "$GITHUB_OUTPUT"
+
+  # Publish NPM packages to npm registry
   publish-packages:
-    needs: [build-packages, check_is_release, gather-package-info]
+    needs:
+      - build-packages
+      - check_is_release
+      - gather-package-info
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -223,8 +311,7 @@ jobs:
       - uses: pnpm/setup@v2
         with:
           version: 7.30.1
-           
-      # Publish packages
+
       - name: Publish to npm
         run: |
           export HUSKY=0
@@ -233,11 +320,6 @@ jobs:
           git config --global user.email "mweichert@gmail.com"
           git config --global user.name "Michael Weichert"
           git commit -am "chore: publish packages" --allow-empty
-          
-          # Determine the appropriate NPM tag for publishing
-          # If the "tag" property from package.json is set to "auto",
-          # we rely on the "is_release" flag.
-          # Otherwise, we use the specified tag in package.json which should be set to "beta", "alpha", etc.
           TAG=${{ matrix.package.tag }}
           if [ "$TAG" == "auto" ]; then
             TAG="dev"
@@ -245,13 +327,344 @@ jobs:
               TAG="latest"
             fi
           fi
-  
-          # Navigate to package directory
           cd ${{ matrix.package.location }}
-    
-          # Publish using pnpm with the determined tag
           pnpm publish --tag $TAG
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-  # Ensure all other jobs that use pnpm include the 'pnpm/setup@v2' action.
+  # Publish website
+  publish-website:
+    needs:
+      - build-packages
+      - check_is_release
+    runs-on: ubuntu-latest
+    env:
+      CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+      CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+      TAQ_VERSION: ${{ needs.check_is_release.outputs.version }}
+    steps:
+      - name: Download work archive
+        uses: actions/download-artifact@v4
+        with:
+          name: work-packages-latest
+          path: .
+
+      - name: Extract work archive
+        run: tar -xzpf work-packages.tar.gz
+
+      - uses: pnpm/setup@v2
+        with:
+          version: 7.30.1
+
+      - name: Build Website
+        run: pnpm run build-website
+
+      - name: Publish Website (Preview)
+        if: needs.check_is_release.outputs.is_release == 'no'
+        run: cd website && pnpm run deploy-preview
+
+      - name: Publish Website (Production)
+        if: needs.check_is_release.outputs.is_release == 'yes'
+        run: cd website && pnpm run deploy
+
+  # Publish binaries to GitHub Releases
+  publish-release:
+    needs:
+      - build-binary-ubuntu
+      - build-binary-macos
+      - build-packages
+      - check_is_release
+    if: needs.check_is_release.outputs.is_release == 'yes'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download taq binary for Linux
+        uses: actions/download-artifact@v4
+        with:
+          name: taq-ubuntu-latest
+          path: taq-linux
+
+      - name: Download taq binary for MacOS
+        uses: actions/download-artifact@v4
+        with:
+          name: taq-macos-latest
+          path: taq-macos
+
+      - name: Download vscode extension
+        uses: actions/download-artifact@v4
+        with:
+          name: taqueria.vsix
+          path: vscode-extension
+
+      - name: Get VSIX
+        id: vsix
+        run: echo "artifact=$(ls vscode-extension/)" >> "$GITHUB_OUTPUT"
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ needs.check_is_release.outputs.version }}
+          release_name: v${{ needs.check_is_release.outputs.version }}
+          draft: true
+          prerelease: false
+
+      - name: Upload Linux binary
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: taq-linux/taq
+          asset_name: taq-linux
+          asset_content_type: application/octet-stream
+
+      - name: Upload MacOS binary
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: taq-macos/taq
+          asset_name: taq-macos
+          asset_content_type: application/octet-stream
+
+      - name: Upload VSCode Extension
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: vscode-extension/${{ steps.vsix.outputs.artifact }}
+          asset_name: taqueria.vsix
+          asset_content_type: application/octet-stream
+
+  publish-vscode:
+    needs:
+      - build-packages
+      - check_is_release
+    if: needs.check_is_release.outputs.is_release == 'yes'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download vscode extension
+        uses: actions/download-artifact@v4
+        with:
+          name: taqueria.vsix
+          path: vscode-extension
+
+      - name: Get VSIX
+        id: vsix
+        run: echo "artifact=$(ls vscode-extension/)" >> "$GITHUB_OUTPUT"
+
+      - name: Publish to Marketplace
+        uses: HaaLeo/publish-vscode-extension@v1
+        with:
+          pat: ${{ secrets.VSCODE_MARKETPLACE_PAT }}
+          extensionFile: vscode-extension/${{ steps.vsix.outputs.artifact }}
+          preRelease: false
+          registryUrl: https://marketplace.visualstudio.com
+
+  # Add comment with published artifacts and packages
+  update-comment:
+    needs:
+      - publish-packages
+      - check_is_pr_or_issue
+    if: needs.check_is_pr_or_issue.outputs.should_run == 'yes'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download work archive
+        uses: actions/download-artifact@v4
+        with:
+          name: work-packages-latest
+          path: .
+
+      - name: Extract work archive
+        run: tar -xzpf work-packages.tar.gz
+
+      - uses: pnpm/setup@v2
+        with:
+          version: 7.30.1
+
+      - name: Get version
+        id: get_version
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "VERSION=$VERSION" >> "$GITHUB_OUTPUT"
+
+      - name: List Lerna Packages
+        id: list_packages
+        run: |
+          echo "PACKAGES<<EOF" >> $GITHUB_OUTPUT
+          npx lerna ls --json | jq -r '.[] | "| \(.name) | \(.version) |"' >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      - name: Update or Create comment
+        uses: peter-evans/create-or-update-comment@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
+          issue-number: ${{ github.event.pull_request.number || needs.check_is_pr_or_issue.outputs.issue_number }}
+          body: |
+            ## Published Binaries & Packages
+
+            | Published | Version |
+            | :--- | :--- |
+            | Taq Binary (MacOS) | [${{ steps.get_version.outputs.VERSION }}](https://github.com/${{ github.repository }}/actions/artifacts) |
+            | Taq Binary (Windows) | [${{ steps.get_version.outputs.VERSION }}](https://github.com/${{ github.repository }}/actions/artifacts) |
+            | VSIX for VSCode Extension | [${{ steps.get_version.outputs.VERSION }}](https://github.com/${{ github.repository }}/actions/artifacts) |
+            ${{ steps.list_packages.outputs.PACKAGES }}
+
+            > Note: You can install the latest development version of a package with `taq install @taqueria/[packageName]@dev`.
+
+          edit-mode: replace
+
+  # List E2E tests to run
+  list-e2e-tests:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: List .spec.ts files
+        id: list
+        run: echo "files=$(ls tests/e2e/*.spec.ts | jq -R -s -c 'split(\"\\n\")[:-1]')" >> "$GITHUB_OUTPUT"
+
+      - name: Set matrix for next job
+        id: set-matrix
+        run: echo 'matrix={"spec":${{ steps.list.outputs.files }}}' >> "$GITHUB_OUTPUT"
+
+      - name: Debug
+        run: echo ${{ fromJson(steps.set-matrix.outputs.matrix) }}
+
+  # Run E2E tests
+  run-e2e-tests:
+    needs:
+      - list-e2e-tests
+      - build-packages
+    runs-on: ubuntu-latest
+    strategy:
+      matrix: ${{ fromJson(needs.list-e2e-tests.outputs.matrix) }}
+    steps:
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - uses: pnpm/setup@v2
+        with:
+          version: 7.30.1
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Download work archive
+        uses: actions/download-artifact@v4
+        with:
+          name: work-packages-latest
+          path: .
+
+      - name: Extract work archive
+        run: tar -xzpf work-packages.tar.gz
+
+      - name: Run tests
+        env:
+          HUSKY_SKIP_INSTALL: 1
+          HUSKY: 0
+        run: |
+          CWD=$(pwd)
+          export PATH=$PATH:$CWD
+          pnpm run test:e2e -w tests ${{ matrix.spec }}
+
+  # List integration tests to run
+  list-integration-tests:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: List .spec.ts files
+        id: list
+        run: echo "files=$(ls tests/integration/*.spec.ts | jq -R -s -c 'split(\"\\n\")[:-1]')" >> "$GITHUB_OUTPUT"
+
+      - name: Set matrix for next job
+        id: set-matrix
+        run: echo 'matrix={"spec":${{ steps.list.outputs.files }}}' >> "$GITHUB_OUTPUT"
+
+      - name: Debug
+        run: echo ${{ fromJson(steps.set-matrix.outputs.matrix) }}
+
+  # Run integration tests
+  run-integration-tests:
+    needs:
+      - list-integration-tests
+      - build-packages
+    runs-on: ubuntu-latest
+    strategy:
+      matrix: ${{ fromJson(needs.list-integration-tests.outputs.matrix) }}
+    steps:
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - uses: pnpm/setup@v2
+        with:
+          version: 7.30.1
+
+      - name: Download work archive
+        uses: actions/download-artifact@v4
+        with:
+          name: work-packages-latest
+          path: .
+
+      - name: Extract work archive
+        run: tar -xzpf work-packages.tar.gz
+
+      - name: Run tests
+        env:
+          HUSKY_SKIP_INSTALL: 1
+          HUSKY: 0
+        run: |
+          CWD=$(pwd)
+          export PATH=$PATH:$CWD
+          pnpm run test:integration -w tests ${{ matrix.spec }}
+
+  # Run all unit tests
+  run-unit-tests:
+    needs:
+      - build-packages
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - uses: pnpm/setup@v2
+        with:
+          version: 7.30.1
+
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
+
+      - name: Download work archive
+        uses: actions/download-artifact@v4
+        with:
+          name: work-packages-latest
+          path: .
+
+      - name: Extract work archive
+        run: tar -xzpf work-packages.tar.gz
+
+      - name: Run tests
+        env:
+          HUSKY_SKIP_INSTALL: 1
+          HUSKY: 0
+          npm_config_loglevel: silly
+        run: |
+          CWD=$(pwd)
+          export PATH=$PATH:$CWD
+          export DENO_DIR=$CWD/.deno
+          pnpm run test:unit -w tests
