--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+# .github/workflows/main.yml
 name: CI/CD Pipeline
 
 on:
@@ -22,7 +23,7 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
-      - uses: pnpm/setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 7.30.1
 
@@ -87,7 +88,7 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
-      - uses: pnpm/setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 7.30.1
 
@@ -151,7 +152,7 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
-      - uses: pnpm/setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 7.30.1
 
@@ -256,7 +257,7 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
-      - uses: pnpm/setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 7.30.1
 
@@ -308,7 +309,7 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
-      - uses: pnpm/setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 7.30.1
 
@@ -352,7 +353,7 @@ jobs:
       - name: Extract work archive
         run: tar -xzpf work-packages.tar.gz
 
-      - uses: pnpm/setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 7.30.1
 
@@ -482,7 +483,7 @@ jobs:
       - name: Extract work archive
         run: tar -xzpf work-packages.tar.gz
 
-      - uses: pnpm/setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 7.30.1
 
@@ -529,11 +530,14 @@ jobs:
 
       - name: List .spec.ts files
         id: list
-        run: echo "files=$(ls tests/e2e/*.spec.ts | jq -R -s -c 'split(\"\\n\")[:-1]')" >> "$GITHUB_OUTPUT"
+        run: |
+          files=$(ls tests/e2e/*.spec.ts)
+          files_json=$(printf '%s\n' "${files[@]}" | jq -R -s -c 'split("\n")[:-1]')
+          echo "files=$files_json" >> $GITHUB_OUTPUT
 
       - name: Set matrix for next job
         id: set-matrix
-        run: echo 'matrix={"spec":${{ steps.list.outputs.files }}}' >> "$GITHUB_OUTPUT"
+        run: echo "matrix={\"spec\":${{ steps.list.outputs.files }}}" >> "$GITHUB_OUTPUT"
 
       - name: Debug
         run: echo ${{ fromJson(steps.set-matrix.outputs.matrix) }}
@@ -545,13 +549,14 @@ jobs:
       - build-packages
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ fromJson(needs.list-e2e-tests.outputs.matrix) }}
+      matrix:
+        spec: ${{ fromJson(needs.list-e2e-tests.outputs.matrix).spec }}
     steps:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - uses: pnpm/setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 7.30.1
 
@@ -587,11 +592,14 @@ jobs:
 
       - name: List .spec.ts files
         id: list
-        run: echo "files=$(ls tests/integration/*.spec.ts | jq -R -s -c 'split(\"\\n\")[:-1]')" >> "$GITHUB_OUTPUT"
+        run: |
+          files=$(ls tests/integration/*.spec.ts)
+          files_json=$(printf '%s\n' "${files[@]}" | jq -R -s -c 'split("\n")[:-1]')
+          echo "files=$files_json" >> $GITHUB_OUTPUT
 
       - name: Set matrix for next job
         id: set-matrix
-        run: echo 'matrix={"spec":${{ steps.list.outputs.files }}}' >> "$GITHUB_OUTPUT"
+        run: echo "matrix={\"spec\":${{ steps.list.outputs.files }}}" >> "$GITHUB_OUTPUT"
 
       - name: Debug
         run: echo ${{ fromJson(steps.set-matrix.outputs.matrix) }}
@@ -603,13 +611,14 @@ jobs:
       - build-packages
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ fromJson(needs.list-integration-tests.outputs.matrix) }}
+      matrix:
+        spec: ${{ fromJson(needs.list-integration-tests.outputs.matrix).spec }}
     steps:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - uses: pnpm/setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 7.30.1
 
@@ -641,7 +650,7 @@ jobs:
         with:
           node-version: 20
 
-      - uses: pnpm/setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 7.30.1
 
