Use TezosTaqueria publisher for VSCode Marketplace

--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "taqueria",
+	"name": "taqueria-official",
 	"displayName": "Taqueria",
 	"description": "A better way to build on Tezos",
-	"publisher": "Taqueria",
-	"version": "0.58.0",
+	"publisher": "TezosTaqueria",
+	"version": "0.58.1",
 	"private": true,
 	"engines": {
 		"vscode": "^1.84.2"
