--- a/taqueria-plugin-contract-types/package.json
+++ b/taqueria-plugin-contract-types/package.json
@@ -35,9 +35,9 @@
 	},
 	"dependencies": {
 		"@taqueria/node-sdk": "workspace:*",
-		"@taquito/michel-codec": "20.2.0-beta.0",
-		"@taquito/signer": "20.2.0-beta.0",
-		"@taquito/taquito": "20.2.0-beta.0",
+		"@taquito/michel-codec": "21.0.0",
+		"@taquito/signer": "21.0.0",
+		"@taquito/taquito": "21.0.0",
 		"bignumber.js": "^9.1.2",
 		"fast-glob": "^3.3.2"
 	},
