--- a/taqueria-plugin-jest/package.json
+++ b/taqueria-plugin-jest/package.json
@@ -29,9 +29,9 @@
 	"dependencies": {
 		"@taqueria/node-sdk": "workspace:*",
 		"@taqueria/plugin-contract-types": "workspace:*",
-		"@taquito/signer": "20.2.0-beta.0",
-		"@taquito/taquito": "20.2.0-beta.0",
-		"@taquito/utils": "20.2.0-beta.0",
+		"@taquito/signer": "21.0.0",
+		"@taquito/taquito": "21.0.0",
+		"@taquito/utils": "21.0.0",
 		"@types/jest": "^29.5.11",
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.1.2",
