--- a/taqueria-plugin-taquito/package.json
+++ b/taqueria-plugin-taquito/package.json
@@ -43,10 +43,10 @@
 	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
 	"dependencies": {
 		"@taqueria/node-sdk": "workspace:*",
-		"@taquito/michel-codec": "20.2.0-beta.0",
-		"@taquito/rpc": "20.2.0-beta.0",
-		"@taquito/signer": "20.2.0-beta.0",
-		"@taquito/taquito": "20.2.0-beta.0",
+		"@taquito/michel-codec": "21.0.0",
+		"@taquito/rpc": "21.0.0",
+		"@taquito/signer": "21.0.0",
+		"@taquito/taquito": "21.0.0",
 		"fast-glob": "^3.3.2",
 		"wtfnode": "^0.9.3"
 	},
