--- a/taqueria-protocol/package.json
+++ b/taqueria-protocol/package.json
@@ -321,9 +321,9 @@
 	},
 	"dependencies": {
 		"@peculiar/webcrypto": "^1.4.5",
-		"@taquito/signer": "20.2.0-beta.0",
-		"@taquito/taquito": "20.2.0-beta.0",
-		"@taquito/utils": "20.2.0-beta.0",
+		"@taquito/signer": "21.0.0",
+		"@taquito/taquito": "21.0.0",
+		"@taquito/utils": "21.0.0",
 		"batching-toposort": "^1.2.0",
 		"esbuild": "^0.20.0",
 		"fluture": "^14.0.0",
