--- a/taqueria-sdk/package.json
+++ b/taqueria-sdk/package.json
@@ -38,9 +38,9 @@
 	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
 	"dependencies": {
 		"@taqueria/protocol": "workspace:*",
-		"@taquito/signer": "20.2.0-beta.0",
-		"@taquito/taquito": "20.2.0-beta.0",
-		"@taquito/utils": "20.2.0-beta.0",
+		"@taquito/signer": "21.0.0",
+		"@taquito/taquito": "21.0.0",
+		"@taquito/utils": "21.0.0",
 		"bip39": "^3.1.0",
 		"fluture": "^14.0.0",
 		"i18next": "^23.15.1",
