--- a/taqueria-vscode-extension-web-ui/package.json
+++ b/taqueria-vscode-extension-web-ui/package.json
@@ -11,8 +11,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@taquito/michel-codec": "20.2.0-beta.0",
-		"@taquito/michelson-encoder": "20.2.0-beta.0",
+		"@taquito/michel-codec": "21.0.0",
+		"@taquito/michelson-encoder": "21.0.0",
 		"@vscode/webview-ui-toolkit": "^1.4.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2"
