--- a/taqueria-plugin-jest/package.json
+++ b/taqueria-plugin-jest/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-jest",
-	"version": "0.70.0",
+	"version": "0.70.1",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -30,9 +30,9 @@
 		"@babel/helpers": "^7.27.0",
 		"@taqueria/node-sdk": "workspace:*",
 		"@taqueria/plugin-contract-types": "workspace:*",
-		"@taquito/signer": "22.0.0-beta.0",
-		"@taquito/taquito": "22.0.0-beta.0",
-		"@taquito/utils": "22.0.0-beta.0",
+		"@taquito/signer": "22.0.0",
+		"@taquito/taquito": "22.0.0",
+		"@taquito/utils": "22.0.0",
 		"@types/jest": "^29.5.11",
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.1.2",
