Fixed building locally

--- a/taqueria-protocol/package.json
+++ b/taqueria-protocol/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/protocol",
-	"version": "0.70.4",
+	"version": "0.70.5",
 	"description": "A TypeScript package which contains types that are to be shared between @taqueria/node-sdk and @taqueria/taqueria.",
 	"main": "index.js",
 	"scripts": {
@@ -9,8 +9,8 @@
 		"typecheck": "pnpm exec tsc --emitDeclarationOnly -p ./tsconfig.json",
 		"build": "pnpm run clean && pnpm run typecheck && pnpm exec tsup",
 		"build-zod": "pnpm exec ts-to-zod types.ts out/types-zod.ts",
-		"postbuild-zod": "pnpm exec ts-node scripts/post-ts-to-zod.ts",
-		"build-type-models": "pnpm exec ts-node scripts/build-types.ts",
+		"postbuild-zod": "ts-node scripts/post-ts-to-zod.ts",
+		"build-type-models": "ts-node scripts/build-types.ts",
 		"build-types": "pnpm run build-zod && pnpm run build-type-models"
 	},
 	"keywords": [
