feat: update Taquito to v24.0.0-beta.0 for Tallinn protocol support
Updates all Taqueria plugins to use Taquito v24.0.0-beta.0 which adds
support for the Tallinn Tezos protocol.

BREAKING CHANGES in Taquito v24:
- `importKey` moved from `@taquito/signer` to `@taquito/taquito`
- `b58cencode` renamed to `b58Encode`
- `Prefix` and `prefix` replaced with `PrefixV2`
- `ContractMethod` removed (only `ContractMethodObject` remains)
- `ContractAbstraction` reduced from 6 to 5 type parameters
- `contract.methods.*` property removed (use `methodsObject` instead)

MIGRATION GUIDE:

1. For existing projects using `contract.methods.*`:

   The `methods` property no longer exists in Taquito v24. You have two options:

   Option A (Recommended): Update to use `methodsObject`:
   ```typescript
   // Before (Taquito < 24)
   await contract.methods.transfer("tz1...", 100).send();

   // After (Taquito >= 24)
   await contract.methodsObject.transfer({ to: "tz1...", amount: 100 }).send();
   ```

   Option B: Use the backwards-compatible wrapper:
   ```typescript
   import { wrapContractWithMethods } from './type-utils';

   const contract = await Tezos.contract.at(address);
   const wrapped = wrapContractWithMethods(contract);
   await wrapped.methods.transfer("tz1...", 100).send(); // Still works!
   ```

2. Re-run `taq generate types` to update generated type files

3. For custom code using Taquito directly:
   - Change `import { importKey } from '@taquito/signer'`
     to `import { importKey } from '@taquito/taquito'`
   - Change `b58cencode` to `b58Encode`
   - Change `prefix[Prefix.P2SK]` to `PrefixV2.P256SecretKey`

Packages updated:
- taqueria-plugin-contract-types
- taqueria-plugin-jest
- taqueria-plugin-taquito
- taqueria-plugin-tezbox
- taqueria-plugin-tzcompose
- taqueria-protocol
- taqueria-sdk
- taqueria-vscode-extension
- taqueria-vscode-extension-web-ui
- tests
- website

Also fixes:
- bin/update-taquito.sh now includes all packages with Taquito deps
- tests/package.jso

--- a/taqueria-plugin-tezbox/package.json
+++ b/taqueria-plugin-tezbox/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-tezbox",
-	"version": "0.78.0",
+	"version": "0.78.1",
 	"description": "A plugin for Taqueria providing local sandbox capabilities built on TezBox",
 	"keywords": [
 		"taqueria",
@@ -36,7 +36,7 @@
 	"dependencies": {
 		"@taqueria/node-sdk": "workspace:*",
 		"@taqueria/protocol": "workspace:*",
-		"@taquito/signer": "^21.0.0-beta.0",
+		"@taquito/signer": "24.0.0-beta.0",
 		"@types/hjson": "^2.4.6",
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.1.2",
