--- a/taqueria-plugin-tzcompose/package.json
+++ b/taqueria-plugin-tzcompose/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-tzcompose",
-	"version": "0.78.0",
+	"version": "0.78.1",
 	"description": "A TzCompose plugin for Taqueria using the GoTz SDK",
 	"main": "index.js",
 	"scripts": {
@@ -23,7 +23,7 @@
 	},
 	"dependencies": {
 		"@taqueria/node-sdk": "workspace:*",
-		"@taquito/signer": "^21.0.0-beta.0"
+		"@taquito/signer": "24.0.0-beta.0"
 	},
 	"tsup": {
 		"entry": [
